--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1250,7 +1250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 131,
    "id": "360e0c38",
    "metadata": {},
    "outputs": [
@@ -1347,27 +1347,27 @@
     "\n",
     "    #kernelIntegral=Array{Float64,2}(undef,length(L_MINUS_N),length(L_MINUS_N))\n",
     "\n",
-    "    kernelIntegral=build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsIndices, coordinates; use_float32=true)\n",
+    "    #kernelIntegral=build_kernelIntegral_gpu(integral1DWYYKK, L_MINUS_N, pointsIndices, coordinates; use_float32=true)\n",
     "\n",
     "\n",
     "    \n",
     "\n",
-    "    function eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,pointsIndices,L_MINUS_N,coordinates)\n",
-    "        Atmp::Float32\n",
-    "        Areturn::Num\n",
+    "    function eachElementAjiννᶜ(νᶜ,ν,iField,iExpr)\n",
+    "\n",
     "        μ_plus_η = νᶜ # we do not subtract from ν since the coordinates are local and ν != (1,1,...)\n",
     "        linearμ_plus_η=LI_L_MINUS_N[μ_plus_η]\n",
-    "        Atmp=0.0\n",
+    "        Atmp=0\n",
     "        Areturn =0\n",
     "        α = bigα[iExpr, iField]\n",
-    "        μᶜ_μ_pairs=precompute_valid_pairs(pointsIndices)\n",
+    "        μᶜ_μ_pairs=precompute_valid_pairs(vec2car.(pointsIndices))\n",
+    "\n",
     "        for eachα ∈ α \n",
     "            nᶜ = eachα.nᶜ\n",
     "            n = eachα.n\n",
     "            nodeValue = eachα.node\n",
     "\n",
     "            L_avail = (n .+ L_MINUS_N) ∩ L_MINUS_N\n",
-    "            Lᶜ_avail = (nᶜ .+ L_MINUS_N) ∩ L_MINUS_N\n",
+    "            @show Lᶜ_avail = (nᶜ .+ L_MINUS_N) ∩ L_MINUS_N\n",
     "\n",
     "            lᶜ_l_pairs= precompute_valid_pairs(Lᶜ_avail,L_avail)\n",
     "\n",
@@ -1380,8 +1380,30 @@
     "                    localmapηᶜ[iVar] = varM[iVar, linearμᶜ_plus_ηᶜ][]\n",
     "                end \n",
     "                \n",
-    "                substitutedValue = substitute(nodeValue, localmapηᶜ)\n",
+    "                @show substitutedValue = substitute(nodeValue, localmapηᶜ)\n",
     "\n",
+    "                # Precompute l_pairs as linear indices (1-based)\n",
+    "                l_pairs = Tuple{Int,Int}[]\n",
+    "                for (lᶜ,l) in lᶜ_l_pairs\n",
+    "                    li = Int(LI_L_MINUS_N[l])    # linearl\n",
+    "                    lc = Int(LI_L_MINUS_N[lᶜ])   # linearlc\n",
+    "                    push!(l_pairs, (li, lc))\n",
+    "                end\n",
+    "\n",
+    "                # Precompute mu_pairs (list of (μᶜ, μ) index pairs in 1-based)\n",
+    "                mu_pairs = [(Int(μᶜ), Int(μ)) for (μᶜ, μ) in μᶜ_μ_pairs]\n",
+    "\n",
+    "                # prepare tmpC vectors (for current linearμ_plus_η, linearμᶜ_plus_ηᶜ)\n",
+    "                tmpC_left  = T_gpu.(vec(tmpCˡημ[linearμ_plus_η, :]))         # length nL\n",
+    "                tmpC_right = T_gpu.(vec(tmpCˡημᶜ[linearμᶜ_plus_ηᶜ, :]))       # length nL\n",
+    "\n",
+    "                # call GPU helper (returns Float32 scalar)\n",
+    "                gpu_sum = gpu_sum_over_lpairs_mu_pairs!(\n",
+    "                    stackedS, Lmat, backend, l_pairs, mu_pairs, tmpC_left, tmpC_right;\n",
+    "                    workgroup=(256,)\n",
+    "                )\n",
+    "\n",
+    "                \"\"\"\n",
     "                pureFloatKernel = 1.0\n",
     "\n",
     "                for (lᶜ,l) ∈ lᶜ_l_pairs \n",
@@ -1395,7 +1417,8 @@
     "                        end\n",
     "                    end\n",
     "                end\n",
-    "                Atmp+= substitutedValue*pureFloatKernel\n",
+    "                \"\"\"\n",
+    "                Atmp += substitutedValue*gpu_sum\n",
     "            end\n",
     "            Areturn+=Atmp\n",
     "        end\n",
@@ -1407,8 +1430,8 @@
     "        for iField in eachindex(fields) # i of Ajiννᶜ\n",
     "            for ν in νIndices # ν in Ajiννᶜ (in the relative coordinates) \n",
     "                for νᶜ in pointsIndices # νᶜ in Ajiννᶜ (in the relative coordinates)\n",
-    "                    \n",
-    "                    Ajiννᶜ = eachElementAjiννᶜ(νᶜ,ν,iField,iExpr,α)\n",
+    "                    @show ν, νᶜ\n",
+    "                    Ajiννᶜ = eachElementAjiννᶜ(νᶜ,ν,iField,iExpr)\n",
     "                end\n",
     "            end\n",
     "        end\n",
@@ -1423,6 +1446,200 @@
     "    return Ajiννᶜ,tmp\n",
     "end"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "38dda453",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "L_MINUS_N = L_MINUS_N = CartesianIndices((5, 5, 5))\n",
+      "(.-)(L_MINUS_N[1]) = CartesianIndex(-1, -1, -1)\n",
+      "(typeof(integral1DWYYKK[1]), typeof(modifiedμ[1])) = (Array{Float64, 4}, Array{Num, 3})\n",
+      "size(integral1DWYYKK[1]) = (3, 3, 6, 6)\n",
+      "(modifiedμ, integral1DWYYKK[1]) = (Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]], [0.5 0.0 0.0; 0.0 0.5 0.0; 0.0 0.0 0.0;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;;; -0.16666666666666652 0.0 0.0; 0.0 0.16666666666666696 0.0; 0.0 0.0 0.0;;; 0.08333333333333304 0.0 0.0; 0.0 0.08333333333333304 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;;; 0.04166666666666652 0.0 0.0; 0.0 0.04166666666666652 0.0; 0.0 0.0 0.0;;; -0.0250000000000008 0.0 0.0; 0.0 0.02500000000000213 0.0; 0.0 0.0 0.0;;; 0.008333333333335524 0.0 0.0; 0.0 0.008333333333331083 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;;; -0.0083333333333336 0.0 0.0; 0.0 0.008333333333334044 0.0; 0.0 0.0 0.0;;; 0.005555555555557016 0.0 0.0; 0.0 0.005555555555554055 0.0; 0.0 0.0 0.0;;; -0.0019841269841247566 0.0 0.0; 0.0 0.001984126984112322 0.0; 0.0 0.0 0.0;;; 0.0004960317460328175 0.0 0.0; 0.0 0.0004960317460336069 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;;; 0.001388888888889254 0.0 0.0; 0.0 0.0013888888888885138 0.0; 0.0 0.0 0.0;;; -0.0009920634920623783 0.0 0.0; 0.0 0.000992063492056161 0.0; 0.0 0.0 0.0;;; 0.0003720238095246131 0.0 0.0; 0.0 0.00037202380952520525 0.0; 0.0 0.0 0.0;;; -9.645061728383e-5 0.0 0.0; 0.0 9.6450617290442e-5 0.0; 0.0 0.0 0.0;;; 1.9290123457076864e-5 0.0 0.0; 0.0 1.9290123443877543e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;;; -0.00019841269841247566 0.0 0.0; 0.0 0.00019841269841123222 0.0; 0.0 0.0 0.0;;; 0.00014880952380984523 0.0 0.0; 0.0 0.0001488095238100821 0.0; 0.0 0.0 0.0;;; -5.7870370370298e-5 0.0 0.0; 0.0 5.78703703742652e-5 0.0; 0.0 0.0 0.0;;; 1.543209876566149e-5 0.0 0.0; 0.0 1.5432098755102034e-5 0.0; 0.0 0.0 0.0;;; -3.1565656573226715e-6 0.0 0.0; 0.0 3.156565659444431e-6 0.0; 0.0 0.0 0.0;;; 5.260942756872093e-7 0.0 0.0; 0.0 5.260942782412156e-7 0.0; 0.0 0.0 0.0])\n",
+      "(ν, νᶜ) = ([2, 2, 2], [1, 1, 1])\n",
+      "Lᶜ_avail = (nᶜ .+ L_MINUS_N) ∩ L_MINUS_N = CartesianIndices((2:5, 2:5, 2:5))\n"
+     ]
+    },
+    {
+     "ename": "BoundsError",
+     "evalue": "BoundsError: attempt to access 3-element Vector{Any} at index []",
+     "output_type": "error",
+     "traceback": [
+      "BoundsError: attempt to access 3-element Vector{Any} at index []\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] throw_boundserror(A::Vector{Any}, I::Tuple{})\n",
+      "   @ Base ./essentials.jl:15\n",
+      " [2] checkbounds\n",
+      "   @ ./abstractarray.jl:699 [inlined]\n",
+      " [3] _getindex\n",
+      "   @ ./abstractarray.jl:1370 [inlined]\n",
+      " [4] getindex(::Vector{Any})\n",
+      "   @ Base ./abstractarray.jl:1342\n",
+      " [5] (::var\"#eachElementAjiννᶜ#ASemiSymbolic##42\"{Array{Vector{Int64}, 3}, Matrix{Any}, Matrix{Any}, LinearIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, LinearIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}})(νᶜ::Vector{Int64}, ν::Vector{Int64}, iField::Int64, iExpr::Int64)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:113\n",
+      " [6] ASemiSymbolic(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X46sZmlsZQ==.jl:167\n",
+      " [7] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y134sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "tmpAjiννᶜU,tmp=ASemiSymbolic(coordinates,multiOrdersIndices,pointsIndices,multiPointsIndices,middleLinearν,Δ,varM,bigα,orderBspline,WorderBspline,NtypeofExpr,NtypeofFields)\n",
+    "@show tmp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "b28e8e90",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gpu_sum_over_lpairs_mu_pairs! (generic function with 1 method)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Requires: KernelAbstractions, Adapt, and `backend` already set (Metal/CPU/CUDA)\n",
+    "# Use Float32 on GPU for speed (change T_gpu = Float64 if you need doubles)\n",
+    "const T_gpu = Float32\n",
+    "\n",
+    "# Kernel: one thread computes contribution for a single (linearl, linearlc, μc, μ) combination\n",
+    "@kernel function kernel_contrib_per_combo!(\n",
+    "    out,      # device array length = Ncombos, type T_gpu\n",
+    "    S,        # stacked integrals: (ncoord, nmu, nmu, nL, nL) of type T_gpu\n",
+    "    Lmat,     # Int32 array (nL, ncoord) where row r gives multi-index entries for linearl r\n",
+    "    linearl_arr,   # Int32 array length Ncombos of linearl indices (1-based)\n",
+    "    linearlc_arr,  # Int32 array length Ncombos of linearlc indices (1-based)\n",
+    "    μc_arr,        # Int32 array length Ncombos of μc indices (1-based)\n",
+    "    μ_arr,         # Int32 array length Ncombos of μ indices (1-based)\n",
+    "    tmpC_left,     # T_gpu vector length nL\n",
+    "    tmpC_right,    # T_gpu vector length nL\n",
+    "    ncoord::Int32,\n",
+    "    nL::Int32\n",
+    ")\n",
+    "    tid = @index(Global, NTuple)   # 1D index\n",
+    "    if tid <= length(out)\n",
+    "        li = linearl_arr[tid]\n",
+    "        lc = linearlc_arr[tid]\n",
+    "        μc = μc_arr[tid]\n",
+    "        μ  = μ_arr[tid]\n",
+    "\n",
+    "        prod = one(eltype(out))\n",
+    "        @inbounds for ic in 1:ncoord\n",
+    "            l_field = Lmat[li, ic]      # stored as row=linearl, col=ic\n",
+    "            l_var   = Lmat[lc, ic]\n",
+    "            # S dims: (ncoord, nmu, nmu, nL, nL)\n",
+    "            prod *= S[ic, μc, μ, l_var+1, l_field+1]\n",
+    "        end\n",
+    "        # multiply by C factors\n",
+    "        out[tid] = tmpC_right[lc] * tmpC_left[li] * prod\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Host helper to call kernel for given lists and sum the results\n",
+    "function gpu_sum_over_lpairs_mu_pairs!(\n",
+    "        stackedS, Lmat, backend,\n",
+    "        l_pairs::Vector{Tuple{Int,Int}},   # pairs of (linearl, linearlc) as linear indices 1-based\n",
+    "        mu_pairs::Vector{Tuple{Int,Int}},  # pairs of (μc, μ) as indices 1-based\n",
+    "        tmpC_left::Vector{T_gpu},          # length nL\n",
+    "        tmpC_right::Vector{T_gpu};         # length nL\n",
+    "        workgroup=(256,)\n",
+    "    )\n",
+    "\n",
+    "    # build flattened arrays of all combinations (cartesian product)\n",
+    "    npairs = length(l_pairs)\n",
+    "    nmu_pairs = length(mu_pairs)\n",
+    "    Ncombos = npairs * nmu_pairs\n",
+    "    if Ncombos == 0\n",
+    "        return zero(T_gpu)\n",
+    "    end\n",
+    "\n",
+    "    # Preallocate host arrays\n",
+    "    linearl_arr_h = Vector{Int32}(undef, Ncombos)\n",
+    "    linearlc_arr_h = Vector{Int32}(undef, Ncombos)\n",
+    "    μc_arr_h = Vector{Int32}(undef, Ncombos)\n",
+    "    μ_arr_h  = Vector{Int32}(undef, Ncombos)\n",
+    "\n",
+    "    idx = 1\n",
+    "    for (li, lc) in l_pairs\n",
+    "        li32 = Int32(li)\n",
+    "        lc32 = Int32(lc)\n",
+    "        for (μc, μ) in mu_pairs\n",
+    "            linearl_arr_h[idx]  = li32\n",
+    "            linearlc_arr_h[idx] = lc32\n",
+    "            μc_arr_h[idx] = Int32(μc)\n",
+    "            μ_arr_h[idx]  = Int32(μ)\n",
+    "            idx += 1\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    # device adapt (if you call this many times, adapt outside and reuse)\n",
+    "    out_h = zeros(T_gpu, Ncombos)\n",
+    "    out_d = Adapt.adapt(backend, out_h)\n",
+    "    S_d = Adapt.adapt(backend, convert(Array{T_gpu}, stackedS))   # convert once\n",
+    "    Lmat_d = Adapt.adapt(backend, Int32.(Lmat))\n",
+    "    linearl_arr_d  = Adapt.adapt(backend, linearl_arr_h)\n",
+    "    linearlc_arr_d = Adapt.adapt(backend, linearlc_arr_h)\n",
+    "    μc_arr_d = Adapt.adapt(backend, μc_arr_h)\n",
+    "    μ_arr_d  = Adapt.adapt(backend, μ_arr_h)\n",
+    "    tmpC_left_d  = Adapt.adapt(backend, tmpC_left)\n",
+    "    tmpC_right_d = Adapt.adapt(backend, tmpC_right)\n",
+    "\n",
+    "    # launch kernel: Ncombos threads\n",
+    "    ndrange = (Ncombos,)\n",
+    "    ncoord = Int32(size(stackedS,1))\n",
+    "    nL = Int32(size(Lmat,1))\n",
+    "    kernel_contrib_per_combo!(backend, workgroup)(\n",
+    "        out_d, S_d, Lmat_d, linearl_arr_d, linearlc_arr_d, μc_arr_d, μ_arr_d,\n",
+    "        tmpC_left_d, tmpC_right_d, ncoord, nL;\n",
+    "        ndrange = ndrange\n",
+    "    )\n",
+    "\n",
+    "    # synchronize (portable)\n",
+    "    if @isdefined(CUDA) && backend isa CUDABackend\n",
+    "        CUDA.synchronize()\n",
+    "    elseif @isdefined(Metal) && backend isa MetalBackend\n",
+    "        Metal.synchronize()\n",
+    "    else\n",
+    "        KernelAbstractions.synchronize(backend)\n",
+    "    end\n",
+    "\n",
+    "    # fetch and sum on host\n",
+    "    out = Array(out_d)   # Ncombos vector\n",
+    "    s = sum(out)         # scalar T_gpu\n",
+    "    return s\n",
+    "end\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aa73d262",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "68851756",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1618,7 +1835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "id": "ec2748b7",
    "metadata": {},
    "outputs": [
@@ -1653,10 +1870,7 @@
      ]
     }
    ],
-   "source": [
-    "tmpAjiννᶜU,tmp=ASemiSymbolic(coordinates,multiOrdersIndices,pointsIndices,multiPointsIndices,middleLinearν,Δ,varM,bigα,orderBspline,WorderBspline,NtypeofExpr,NtypeofFields)\n",
-    "@show tmp"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
