--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -903,147 +903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "id": "2049a99a",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `L_MINUS_N` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: `L_MINUS_N` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
-      "\n",
-      "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X44sZmlsZQ==.jl:3"
-     ]
-    }
-   ],
-   "source": [
-    "# just to getIntegralWYYKK\n",
-    "iCoord=1\n",
-    "integralParams = @strdict oB =orderBspline[iCoord] oWB = WorderBspline[iCoord] νCoord=pointsIndices[middleLinearν][iCoord] LCoord = multiPointsIndices[end][iCoord] ΔCoord=Δ[iCoord] l_n_max=L_MINUS_N[end][iCoord]\n",
-    "        output = myProduceOrLoad(getIntegralWYYKK,integralParams,\"intKernel\")\n",
-    "integral1DWYYKK[iCoord] = output[\"intKernelforνLΔ\"]\n",
-    "@show output[\"modμ\"]\n",
-    "linearμᶜ=1;linearμ=1;l_n_variable=0;l_n_field=0\n",
-    "@show integral1DWYYKK[iCoord][pointsIndices[linearμᶜ][iCoord],pointsIndices[linearμ][iCoord],l_n_variable+1,l_n_field+1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "id": "e1cc5ba7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "compute_CoefU_kernel! (generic function with 4 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# don't know if this works\n",
-    "\n",
-    "using KernelAbstractions, Adapt\n",
-    "# assume backend already detected and `stack_integrals` exists\n",
-    "\n",
-    "# ---------- GPU kernel: one thread per (iExpr, iField)\n",
-    "# Kout is the output CoefU array [nExpr, nFields]\n",
-    "@kernel function compute_CoefU_kernel!(\n",
-    "    Kout,            # Float array (nExpr, nFields)\n",
-    "    S,               # stacked integrals: (ncoord, nmu, nmu, nL, nL)\n",
-    "    Lmat, Pmat,      # mapping arrays as before\n",
-    "    # C matrices packed:\n",
-    "    C_left,          # Float array: (n_mu_plus_eta, nL)  -- tmpCˡη (μ+η x linearl)\n",
-    "    C_right,         # Float array: (n_muc_plus_eta, nL) -- tmpCˡημᶜ (μc+ηc x linearlc)\n",
-    "    Ulocal_arr,      # Float array: (n_mu_plus_eta, nFields)\n",
-    "    # alpha indexing:\n",
-    "    alpha_flat,      # Int32 flattened alpha indices\n",
-    "    alpha_ptrs,      # Int32 start pointers per pair (len = nExpr*nFields+1) 1-based\n",
-    "    # alpha properties:\n",
-    "    alpha_n,         # Int32 array of shape (n_alpha, ncoord)  -- base n for each alpha\n",
-    "    alpha_nc,        # Int32 array (n_alpha, ncoord)\n",
-    "    # substituted values pre-evaluated:\n",
-    "    subVal,          # Float array: (n_alpha, n_muc_plus_eta) numeric\n",
-    "    # dims\n",
-    "    nExpr::Int32, nFields::Int32,\n",
-    "    ncoord::Int32, nmu::Int32, nL::Int32\n",
-    "    )\n",
-    "    (iex, jfield) = @index(Global, NTuple{2})\n",
-    "    if iex <= nExpr && jfield <= nFields\n",
-    "        acc = zero(eltype(Kout))\n",
-    "        # compute flattened pair index for alpha_ptrs (1-based)\n",
-    "        pair_idx = (iex - 1) * nFields + jfield\n",
-    "        startp = alpha_ptrs[pair_idx]\n",
-    "        endp   = alpha_ptrs[pair_idx+1] - 1\n",
-    "\n",
-    "        # iterate over alpha entries\n",
-    "        for aidx in startp:endp\n",
-    "            alpha_id = alpha_flat[aidx]            # actual alpha index (1-based)\n",
-    "            # read base multi-indices n and n^c\n",
-    "            # alpha_n and alpha_nc are stored as contiguous blocks: alpha_n[(alpha_id-1)*ncoord + ic]\n",
-    "            # but for simplicity we assume alpha_n is shaped (n_alpha, ncoord)\n",
-    "            @inbounds for μc_idx in 1:nmu\n",
-    "                for μ_idx in 1:nmu\n",
-    "                    # iterate inner sums over μ+η and μc+ηc\n",
-    "                    # But we don't have direct lists for μ+η; here we assume\n",
-    "                    # C_left and Ulocal are indexed by μ_plus_eta_idx\n",
-    "                    # and C_right by μc_plus_eta_idx.\n",
-    "                    # We must loop over μ_plus_eta and μc_plus_eta indices:\n",
-    "                    # For performance you'd probably tile over these too, but here we keep it simple.\n",
-    "                    # If subVal is (n_alpha, n_muc_plus_eta) we need μc_plus_eta index in 1..n_muc_plus_eta.\n",
-    "                    # We iterate over those ranges:\n",
-    "                    for μcpe in 1:size(C_right, 1)         # μc_plus_eta index\n",
-    "                        tmpCr = C_right[μcpe, :]           # view of size nL\n",
-    "                        ssub = subVal[alpha_id, μcpe]\n",
-    "                        if ssub == 0.0\n",
-    "                            continue\n",
-    "                        end\n",
-    "                        for μpe in 1:size(C_left, 1)       # μ_plus_eta index\n",
-    "                            tmpCl = C_left[μpe, :]        # view of size nL\n",
-    "                            U_here = Ulocal_arr[μpe, jfield]\n",
-    "                            # Now we iterate l and l^c indices (linearl indices)\n",
-    "                            # For now loop full range of nL (you can shrink this if you precomputed lists)\n",
-    "                            prod_sum = zero(eltype(acc))\n",
-    "                            # We'll compute kernelProducts for the (ic) product using S\n",
-    "                            # But this depends on lvar and lfield; so we loop over l and lc\n",
-    "                            for linearl in 1:nL\n",
-    "                                for linearlc in 1:nL\n",
-    "                                    # build kernelProducts across coordinates\n",
-    "                                    kernp = one(eltype(acc))\n",
-    "                                    @inbounds for ic in 1:ncoord\n",
-    "                                        l_field = Lmat[linearl, ic]  # careful: ensure Lmat layout matches\n",
-    "                                        l_var   = Lmat[linearlc, ic]\n",
-    "                                        # choose μc, μ indices appropriate: here we used μ_idx, μc_idx\n",
-    "                                        # but S expects (ic, μc, μ, lvar+1, lfield+1)\n",
-    "                                        kernp *= S[ic, μc_idx, μ_idx, l_var+1, l_field+1]\n",
-    "                                    end\n",
-    "                                    # multiply with C entries (tmpCl[linearl], tmpCr[linearlc])\n",
-    "                                    prod_sum += tmpCl[linearl] * tmpCr[linearlc] * kernp\n",
-    "                                end\n",
-    "                            end\n",
-    "                            # accumulate: multiply by substituted value and U\n",
-    "                            acc += prod_sum * ssub * U_here\n",
-    "                        end\n",
-    "                    end\n",
-    "                end\n",
-    "            end\n",
-    "        end\n",
-    "        Kout[iex, jfield] = acc\n",
-    "    end\n",
-    "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 101,
    "id": "debb0153",
    "metadata": {},
    "outputs": [
@@ -1081,8 +941,133 @@
     "    return CPU()\n",
     "end\n",
     "\n",
+    "\n",
+    "\n",
     "const backend = detect_backend()\n",
-    "println(\"Selected backend type: \", typeof(backend))\n"
+    "println(\"Selected backend type: \", typeof(backend))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "7fd11080",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "LoadError",
+     "evalue": "LoadError: Configuration should be of form:\n* `cpu=false`\n* `inbounds=true`\n* `unsafe_indices=true`\ngot `launch = backend`\nin expression starting at /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y142sZmlsZQ==.jl:31",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: Configuration should be of form:\n",
+      "* `cpu=false`\n",
+      "* `inbounds=true`\n",
+      "* `unsafe_indices=true`\n",
+      "got `launch = backend`\n",
+      "in expression starting at /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y142sZmlsZQ==.jl:31\n",
+      "\n",
+      "Stacktrace:\n",
+      "  [1] error(::String, ::Expr, ::String)\n",
+      "    @ Base ./error.jl:54\n",
+      "  [2] var\"@kernel\"(__source__::LineNumberNode, __module__::Module, ex::Vararg{Any})\n",
+      "    @ KernelAbstractions ~/.julia/packages/KernelAbstractions/X5fk1/src/KernelAbstractions.jl:88\n",
+      "  [3] eval(m::Module, e::Any)\n",
+      "    @ Core ./boot.jl:489\n",
+      "  [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
+      "    @ Base ./loading.jl:2842\n",
+      "  [5] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
+      "  [6] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
+      "  [7] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
+      "  [8] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
+      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/JSONRPC/src/typed.jl:0\n",
+      "  [9] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#14#15\"{String})\n",
+      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
+      " [10] top-level scope\n",
+      "    @ ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/notebook/notebook.jl:35"
+     ]
+    }
+   ],
+   "source": [
+    "using KernelAbstractions\n",
+    "using Adapt\n",
+    "\n",
+    "# Choose Metal backend\n",
+    "#backend = :metal\n",
+    "#backend = KernelAbstractions.get_backend(backend)\n",
+    "\n",
+    "# Example: 3D tensors\n",
+    "dims = (4, 5, 6)\n",
+    "A = rand(Float32, dims...)\n",
+    "x = rand(Float32, dims...)\n",
+    "\n",
+    "# Transfer arrays to the backend (Metal)\n",
+    "dA = Adapt.adapt(backend, A)\n",
+    "dx = Adapt.adapt(backend, x)\n",
+    "\n",
+    "# Output accumulator\n",
+    "out = Adapt.adapt(backend, zeros(Float32, 1))\n",
+    "\n",
+    "# Define kernel: elementwise multiply and atomic add\n",
+    "function sum_product_kernel(A, x, out)\n",
+    "    i = @index(Global)  # linear index\n",
+    "    if i <= length(A)\n",
+    "        @atomic out[1] += A[i] * x[i]\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Launch kernel\n",
+    "threads = 256\n",
+    "blocks = cld(length(dA), threads)\n",
+    "@kernel launch=backend threads=threads blocks=blocks sum_product_kernel(dA, dx, out)\n",
+    "\n",
+    "# Fetch result\n",
+    "result = Array(out)[1]\n",
+    "\n",
+    "println(\"GPU Metal result = \", result)\n",
+    "println(\"CPU reference     = \", sum(A .* x))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "id": "ce90da65",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `lc_l_pairs` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: `lc_l_pairs` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y144sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "nPairs = length(lc_l_pairs)\n",
+    "resultGPU = Adapt.adapt(backend, zeros(Float64, nPairs))\n",
+    "\n",
+    "# Launch kernel\n",
+    "threads = 256\n",
+    "blocks = ceil(Int, nPairs/threads)\n",
+    "kernelPureFloat!(backend, (threads,blocks))(resultGPU, S_d, Cημc_d, Cημ_d, LC_pairs_d, μ_pairs_d, Int32(ncoord), Int32(nPoints))\n",
+    "\n",
+    "# Synchronize\n",
+    "if backend isa CUDABackend\n",
+    "    CUDA.synchronize()\n",
+    "elseif backend isa MetalBackend\n",
+    "    Metal.synchronize()\n",
+    "end\n",
+    "\n",
+    "# Reduce product\n",
+    "pureFloatKernel = prod(Array(resultGPU))\n"
    ]
   },
   {
@@ -1390,6 +1375,13 @@
     "                end\n",
     "\n",
     "                \n",
+    "\n",
+    "\n",
+    "                \n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "                # prepare tmpC vectors (for current linearμ_plus_η, linearμᶜ_plus_ηᶜ)\n",
     "                tmpC_left  = T_gpu.(vec(Cˡη[linearμᶜ_plus_ηᶜ,:,linearμ] # C^{(l)}_{μ+η;μ,ν}))         # length nL\n",
