--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -950,43 +950,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 117,
    "id": "7fd11080",
    "metadata": {},
    "outputs": [
     {
-     "ename": "LoadError",
-     "evalue": "LoadError: Configuration should be of form:\n* `cpu=false`\n* `inbounds=true`\n* `unsafe_indices=true`\ngot `launch = backend`\nin expression starting at /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y142sZmlsZQ==.jl:31",
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `kernel` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
      "output_type": "error",
      "traceback": [
-      "LoadError: Configuration should be of form:\n",
-      "* `cpu=false`\n",
-      "* `inbounds=true`\n",
-      "* `unsafe_indices=true`\n",
-      "got `launch = backend`\n",
-      "in expression starting at /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y142sZmlsZQ==.jl:31\n",
+      "UndefVarError: `kernel` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
       "\n",
       "Stacktrace:\n",
-      "  [1] error(::String, ::Expr, ::String)\n",
-      "    @ Base ./error.jl:54\n",
-      "  [2] var\"@kernel\"(__source__::LineNumberNode, __module__::Module, ex::Vararg{Any})\n",
-      "    @ KernelAbstractions ~/.julia/packages/KernelAbstractions/X5fk1/src/KernelAbstractions.jl:88\n",
-      "  [3] eval(m::Module, e::Any)\n",
-      "    @ Core ./boot.jl:489\n",
-      "  [4] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)\n",
-      "    @ Base ./loading.jl:2842\n",
-      "  [5] (::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String})()\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:24\n",
-      "  [6] withpath(f::VSCodeServer.var\"#notebook_runcell_request##0#notebook_runcell_request##1\"{VSCodeServer.NotebookRunCellArguments, String}, path::String)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/repl.jl:276\n",
-      "  [7] notebook_runcell_request(conn::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, params::VSCodeServer.NotebookRunCellArguments, token::VSCodeServer.CancellationTokens.CancellationToken)\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:13\n",
-      "  [8] dispatch_msg(x::VSCodeServer.JSONRPC.JSONRPCEndpoint{Base.PipeEndpoint, Base.PipeEndpoint, VSCodeServer.JSON.Serializations.StandardSerialization}, dispatcher::VSCodeServer.JSONRPC.MsgDispatcher, msg::VSCodeServer.JSONRPC.Request)\n",
-      "    @ VSCodeServer.JSONRPC ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/JSONRPC/src/typed.jl:0\n",
-      "  [9] serve_notebook(pipename::String, debugger_pipename::String, outputchannel_logger::Base.CoreLogging.SimpleLogger; error_handler::var\"#14#15\"{String})\n",
-      "    @ VSCodeServer ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/packages/VSCodeServer/src/serve_notebook.jl:147\n",
-      " [10] top-level scope\n",
-      "    @ ~/.vscode/extensions/julialang.language-julia-1.149.2/scripts/notebook/notebook.jl:35"
+      " [1] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_Y142sZmlsZQ==.jl:30"
      ]
     }
    ],
@@ -994,34 +972,33 @@
     "using KernelAbstractions\n",
     "using Adapt\n",
     "\n",
-    "# Choose Metal backend\n",
-    "#backend = :metal\n",
-    "#backend = KernelAbstractions.get_backend(backend)\n",
+    "# Backend: Metal\n",
+    "#backend = KernelAbstractions.MetalBackend()\n",
     "\n",
-    "# Example: 3D tensors\n",
+    "# Example 3D tensors\n",
     "dims = (4, 5, 6)\n",
     "A = rand(Float32, dims...)\n",
     "x = rand(Float32, dims...)\n",
     "\n",
-    "# Transfer arrays to the backend (Metal)\n",
+    "# Transfer arrays to GPU\n",
     "dA = Adapt.adapt(backend, A)\n",
     "dx = Adapt.adapt(backend, x)\n",
-    "\n",
-    "# Output accumulator\n",
     "out = Adapt.adapt(backend, zeros(Float32, 1))\n",
     "\n",
-    "# Define kernel: elementwise multiply and atomic add\n",
-    "function sum_product_kernel(A, x, out)\n",
+    "# Kernel definition\n",
+    "@kernel function sum_product_kernel(A, x, out)\n",
     "    i = @index(Global)  # linear index\n",
     "    if i <= length(A)\n",
     "        @atomic out[1] += A[i] * x[i]\n",
     "    end\n",
     "end\n",
     "\n",
-    "# Launch kernel\n",
+    "\n",
+    "\n",
+    "# Launch kernel: pass threads and blocks as a tuple\n",
     "threads = 256\n",
     "blocks = cld(length(dA), threads)\n",
-    "@kernel launch=backend threads=threads blocks=blocks sum_product_kernel(dA, dx, out)\n",
+    "kernel((threads, blocks), backend, dA, dx, out)\n",
     "\n",
     "# Fetch result\n",
     "result = Array(out)[1]\n",
