--- a/OPTmotors/misc/geopoints_exercises.ipynb
+++ b/OPTmotors/misc/geopoints_exercises.ipynb
@@ -12,23 +12,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "e5a8da10",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  1.410342 seconds (2.07 M allocations: 89.681 MiB, 2.27% gc time, 99.95% compilation time)\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
-      "┌ Info: Including with Revise: ../src/batchDrWatson.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/DSM1D.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/GeoPoints.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n",
-      "┌ Info: Including with Revise: ../src/getSeismicParamTopo.jl\n",
-      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchRevise.jl:25\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
      ]
     }
    ],
@@ -39,7 +38,7 @@
     "cd(@__DIR__)\n",
     "Pkg.activate(\"../..\")\n",
     "ParamFile = \"../test/testparam.csv\"\n",
-    "include(\"../src/batchRevise.jl\") \n",
+    "\n",
     "\n",
     "include(\"../src/batchDrWatson.jl\")\n",
     "include(\"../src/DSM1D.jl\")\n",
@@ -50,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "5acc4428",
    "metadata": {},
    "outputs": [
@@ -611,15 +610,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.7",
+   "display_name": "Julia 1.12.1",
    "language": "julia",
-   "name": "julia-1.11"
+   "name": "julia-1.12"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.7"
+   "version": "1.12.1"
   }
  },
  "nbformat": 4,
